fixes antiJoin